--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="3xD49lbsEsJedeeN4HM2m-Bf_aSKMNm78pSu6shiCrM">
     <title>Calculate.com</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
